<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".HomeActivity">

        <ImageView
            android:id="@+id/imageViewHomeIcon"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_round"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textViewTreatmentCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/treatments"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewHomeIcon" />

        <Button
            android:id="@+id/buttonCataract"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:text="@string/cataract_surgery"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/textViewInstruction"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewInstruction"
            app:layout_constraintTop_toBottomOf="@+id/textViewInstruction" />

        <Button
            android:id="@+id/buttonGlaucoma"
            android:textColor="@color/black"
            android:backgroundTint="@color/design_default_color_secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/glaucoma"
            app:layout_constraintEnd_toEndOf="@+id/buttonCataract"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/buttonCataract"
            app:layout_constraintTop_toBottomOf="@+id/buttonCataract" />

        <Button
            android:id="@+id/buttonUveitis"
            android:textColor="@color/black"
            android:backgroundTint="@color/design_default_color_secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/uveitis"
            app:layout_constraintEnd_toEndOf="@+id/buttonGlaucoma"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/buttonGlaucoma"
            app:layout_constraintTop_toBottomOf="@+id/buttonGlaucoma" />

        <Button
            android:id="@+id/buttonDryEye"
            android:textColor="@color/black"
            android:backgroundTint="@color/design_default_color_secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/dry_eye"
            app:layout_constraintEnd_toEndOf="@+id/buttonUveitis"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/buttonUveitis"
            app:layout_constraintTop_toBottomOf="@+id/buttonUveitis" />

        <TextView
            android:id="@+id/textViewInstruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/instructions_home"
            app:layout_constraintEnd_toEndOf="@+id/textViewTreatmentCategories"
            app:layout_constraintStart_toStartOf="@+id/textViewTreatmentCategories"
            app:layout_constraintTop_toBottomOf="@+id/textViewTreatmentCategories" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>